x64/Debug/StuckFish.log
  Evaluate.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
C:\Users\C-60\Desktop\cppPrograms\StuckFish\bitboards.h(322): error : identifier "slider_attacks" is undefined
    	return   Pt == BISHOP ? slider_attacks.BishopAttacks(occ, sq)
    	                        ^
  
  Pawns.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
C:\Users\C-60\Desktop\cppPrograms\StuckFish\bitboards.h(322): error : identifier "slider_attacks" is undefined
    	return   Pt == BISHOP ? slider_attacks.BishopAttacks(occ, sq)
    	                        ^
  
  UCI.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
  ai_logic.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
ai_logic.cpp(320): warning #589: transfer of control bypasses initialization of:
              variable "fmargin" (declared at line 394)
    	if (FlagInCheck || (ss - 1)->excludedMove.tried || sd.skipEarlyPruning) goto moves_loop;
    	                                                                        ^
  
  bitboards.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
C:\Users\C-60\Desktop\cppPrograms\StuckFish\bitboards.h(322): error : identifier "slider_attacks" is undefined
    	return   Pt == BISHOP ? slider_attacks.BishopAttacks(occ, sq)
    	                        ^
  
  main.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
  material.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
C:\Users\C-60\Desktop\cppPrograms\StuckFish\bitboards.h(322): error : identifier "slider_attacks" is undefined
    	return   Pt == BISHOP ? slider_attacks.BishopAttacks(occ, sq)
    	                        ^
  
  movegen.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
C:\Users\C-60\Desktop\cppPrograms\StuckFish\bitboards.h(322): error : identifier "slider_attacks" is undefined
    	return   Pt == BISHOP ? slider_attacks.BishopAttacks(occ, sq)
    	                        ^
  
  zobristh.cpp
C:\Users\C-60\Desktop\cppPrograms\StuckFish\move.h(9): warning #945: type qualifier ignored
        const Move();
        ^
  
